--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3901,3 +3901,16 @@ input, select, textarea {
 			}
 
 		}
+
+
+.inner img{
+	width: 50px;
+	height: 50px;
+}
+.logos{
+	width: 100%;
+	display: flex;
+	justify-content: space-evenly;
+	padding: 30px;
+
+}
